--- a/package.json
+++ b/package.json
@@ -14,17 +14,25 @@
     "browser-sync": "2.18.8",
     "css-mqpacker": "6.0.0",
     "del": "2.2.2",
-    "eslint": "4.2.0",
+    "eslint": "^4.2.0",
     "eslint-config-htmlacademy": "0.4.x",
     "gulp": "3.9.1",
+    "gulp-better-rollup": "3.1.0",
     "gulp-csso": "3.0.0",
     "gulp-imagemin": "3.2.0",
     "gulp-plumber": "1.1.0",
     "gulp-postcss": "7.0.0",
     "gulp-rename": "1.2.2",
-    "gulp-sass": "3.1.0"
+    "gulp-sass": "3.1.0",
+    "gulp-sourcemaps": "2.6.4"
   },
   "engines": {
     "node": "6.11.3"
+  },
+  "dependencies": {
+    "ajv": "^6.4.0",
+    "npm": "^5.8.0",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
   }
 }
